Pipelines/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: walking-skeletion-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app: walking-skeletion-app
  ports:
    - protocol: TCP
      port: 7777
      targetPort: 7777
