Pipelines/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: walking-skeleton-ing
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: walking-skeleton-svc
    servicePort: 80
